# easy_couch

./: Cargo.toml  readme.md
.github/workflows/: rust.yml
examples/todo/: Cargo.toml
examples/todo/src/: main.rs  myapp.rs  scheme.rs
query_macro/: Cargo.toml
query_macro/src/: lib.rs
src/: conn.rs  lib.rs  query.rs  traits.rs
