workspace = { members = ["examples/todo", "query_macro"] }
[package]
name = "easy_couch"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
query_macro = { path = "query_macro" }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
couch_rs = "0.10.0"
dotenv = "0.15.0"
serde = "1.0.198"
serde_json = "1.0.116"
nanoid = "0.4.0"

[dev-dependecies]
egui = "0.27.2"
eframe = "0.27.2"
egui_extras = "0.27.2"
env_logger = "0.11.3"
