[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
EasyCouch = { path = "../../" }
query_macro = { path = "../../query_macro" }
eframe = "0.27.2"
egui = "0.27.2"
egui_extras = "0.27.2"
env_logger = "0.11.3"
serde = "1.0.203"
serde_json = "1.0.117"
tokio = "1.37.0"
